more on expr processing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,6 +71,7 @@ set(GRAPH_RESULT_CACHING_FILE
         gresults-caching/query_processing/UnionProcessor.cpp
         gresults-caching/query_processing/OptionalProcessor.cpp
         gresults-caching/query_processing/ExprProcessor.cpp
+        gresults-caching/query_processing/ExprListProcessor.cpp
 
 )
 
