--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,4 @@
-FROM debian:buster-slim
+FROM cmirandat/base-debian-rdfcachek2:v1
 
 ENV CC clang-11
 ENV CXX clang++-11
@@ -11,24 +11,6 @@ COPY _bundled_code.tar.gz .
 COPY runner.sh .
 
 RUN echo "Debug = $debug"
-RUN apt-get update && apt-get install -y ca-certificates wget gnupg2 bash lsb-release software-properties-common
-# RUN wget https://apt.llvm.org/llvm.sh && chmod +x llvm.sh && ./llvm.sh 11
-RUN echo "deb http://apt.llvm.org/buster/ llvm-toolchain-buster main" | tee -a /etc/apt/sources.list && \
-echo "deb-src http://apt.llvm.org/buster/ llvm-toolchain-buster main" | tee -a /etc/apt/sources.list && \
-echo "deb http://apt.llvm.org/buster/ llvm-toolchain-buster-11 main" | tee -a /etc/apt/sources.list && \
-echo "deb-src http://apt.llvm.org/buster/ llvm-toolchain-buster-11 main" | tee -a /etc/apt/sources.list && \
-wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key |  apt-key add -
-RUN apt-get update && \
-apt-get install -y \
- git libprotobuf-dev libprotoc-dev protobuf-compiler \
- make clang-11 clang-format bash linux-libc-dev libbsd-dev \
- flex bison wget tar rsync libssl-dev
-# RUN ln -s /usr/bin/clang++-11 /usr/bin/clang++ && ln -s /usr/bin/clang-11 /usr/bin/clang
-RUN CMAKE_PRE=https://github.com/Kitware/CMake/releases/download/v3.18.2/ &&\
- CMAKE_NAME=cmake-3.18.2-Linux-x86_64 && \
- wget ${CMAKE_PRE}${CMAKE_NAME}.tar.gz && \
- tar -zxvf ${CMAKE_NAME}.tar.gz && \
- rsync -rv ${CMAKE_NAME}/ /usr/
 
 RUN if [ $debug = "FALSE" ]; then \
 echo "ON NORMAL BUILD" && \
