--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -77,6 +77,7 @@ set(GRAPH_RESULT_CACHING_FILE
         gresults-caching/query_processing/ExprProcessor.cpp
         gresults-caching/query_processing/ExprListProcessor.cpp
         gresults-caching/query_processing/ExprProcessorPersistentData.cpp
+        gresults-caching/query_processing/MinusProcessor.cpp
 
         gresults-caching/query_processing/expr/IsBlankEval.cpp
         gresults-caching/query_processing/expr/ExprEval.cpp
