--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -79,6 +79,7 @@ set(GRAPH_RESULT_CACHING_FILE
         gresults-caching/query_processing/ExprListProcessor.cpp
         gresults-caching/query_processing/ExprProcessorPersistentData.cpp
         gresults-caching/query_processing/MinusProcessor.cpp
+        gresults-caching/query_processing/OrderNodeProcessor.cpp
 
         gresults-caching/query_processing/expr/IsBlankEval.cpp
         gresults-caching/query_processing/expr/ExprEval.cpp
