--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -174,7 +174,7 @@ set(GRAPH_RESULT_CACHING_FILE
 
         gresults-caching/query_processing/utility/StringHandlingUtil.cpp
         gresults-caching/query_processing/DateInfo.hpp
-        )
+        gresults-caching/query_processing/PathProcessor.cpp gresults-caching/query_processing/PathProcessor.hpp)
 
 
 set(NETWORK_SOURCE_FILES
