--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -4,6 +4,9 @@ ENV CC clang-11
 ENV CXX clang++-11
 
 ARG debug="FALSE"
+ARG CACHE_CORES_BUILD="1"
+ENV CACHE_CORES_BUILD=$CACHE_CORES_BUILD
+
 
 WORKDIR RDFCacheK2
 
@@ -11,6 +14,9 @@ COPY _bundled_code.tar.gz .
 COPY runner.sh .
 
 RUN echo "Debug = $debug"
+
+RUN echo CACHE_CORES_BUILD=$CACHE_CORES_BUILD
+
 
 RUN if [ $debug = "FALSE" ]; then \
 echo "ON NORMAL BUILD" && \
