Refactor sequences processing, now its faster in most cases Squashed commit of the following:
commit 361fa111bb2a0232338633e3df8afde5ae742c56
Author: CristobalM <cristobal.miranda.tt@gmail.com>
Date:   Fri Jul 23 10:34:07 2021 -0400

    implement get_resource_clone for several resources

commit c07e82ca47b505579a913a551a10133e6c033f2a
Author: CristobalM <cristobal.miranda.tt@gmail.com>
Date:   Fri Jul 23 06:34:08 2021 -0400

    load predicates before counting timeout

commit 2a2864759f0ad32b2befade292646384056df656
Author: CristobalM <cristobal.miranda.tt@gmail.com>
Date:   Fri Jul 23 05:48:47 2021 -0400

    bundle code clean up

commit 4ea03b1f579c1ef27c11f5fcea0f80e52a525fe4
Author: CristobalM <cristobal.miranda.tt@gmail.com>
Date:   Fri Jul 23 05:45:42 2021 -0400

    fix dependency graph

commit a1dae32bda9da4e76ca12147e9b79d4158162c7b
Author: Cristobal M <cristobal.miranda.tt@gmail.com>
Date:   Thu Jul 22 21:31:43 2021 -0400

    using varbindingqproc to eval var terms

commit 0de7bc27cbcc02e431f8750f4005ca7b958ef876
Author: Cristobal M <cristobal.miranda.tt@gmail.com>
Date:   Thu Jul 22 18:18:12 2021 -0400

    add time control ticks to new iterators

commit d738460f43ecdb6df8aee13dfd32541baf260e6a
Author: Cristobal M <cristobal.miranda.tt@gmail.com>
Date:   Thu Jul 22 17:44:25 2021 -0400

    fix concurrency problem with k2tree scanners + refactor scanners

commit 39a1b7db43dd76ae01ca8985503e3d801c81eaf3
Author: CristobalM <cristobal.miranda.tt@gmail.com>
Date:   Thu Jul 22 14:51:26 2021 -0400

    small changes + test

commit 83221462bb4a2ebeb63c653dead0257d7fcb967a
Author: CristobalM <cristobal.miranda.tt@gmail.com>
Date:   Thu Jul 22 03:38:36 2021 -0400

    seems to work, most tests are passing

commit 0177847572ebfc1a1eaddf2cef863e6d1452169c
Author: Cristobal M <cristobal.miranda.tt@gmail.com>
Date:   Wed Jul 21 18:16:44 2021 -0400

    adds sequence proc by using directed graphs to order queries

commit 65f95dcb5875a44d0611dd455e2e7c18945b715e
Author

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,7 +43,13 @@ set(CORE_SOURCE_FILES
         core/CacheSettings.cpp
         core/InMemoryCacheSettings.cpp
         core/PredicateFetchResult.cpp
-        )
+        core/BandScanner.cpp
+        core/BandScanner.hpp
+        core/FullScanner.cpp
+        core/FullScanner.hpp
+        core/K2TreeScanner.hpp
+        core/EmptyScanner.cpp
+        core/EmptyScanner.hpp)
 
 set(PROC_SOURCE_FILES
         proc/QueueIteratorDictString.cpp
@@ -236,7 +242,7 @@ set(GRAPH_RESULT_CACHING_FILE
         gresults-caching/query_processing/OrderNodeProcessorVec.cpp
         gresults-caching/query_processing/OrderNodeProcessorVec.hpp
 
-        )
+        gresults-caching/query_processing/SequenceProcessor.cpp gresults-caching/query_processing/SequenceProcessor.hpp gresults-caching/query_processing/VarDependencyGraph.cpp gresults-caching/query_processing/VarDependencyGraph.hpp gresults-caching/query_processing/QProc.hpp gresults-caching/query_processing/VarsCollection.cpp gresults-caching/query_processing/VarsCollection.hpp gresults-caching/query_processing/VDGNode.cpp gresults-caching/query_processing/VDGNode.hpp gresults-caching/query_processing/ResultTableIteratorCrossProduct.cpp gresults-caching/query_processing/ResultTableIteratorCrossProduct.hpp gresults-caching/query_processing/VarBindingQProc.cpp gresults-caching/query_processing/VarBindingQProc.hpp gresults-caching/query_processing/ResultTableIteratorJoinSeqBinding.cpp gresults-caching/query_processing/ResultTableIteratorJoinSeqBinding.hpp)
 
 
 set(NETWORK_SOURCE_FILES
